# ruff

./: Cargo.toml
.cargo/: config.toml
crates/ruff/: Cargo.toml
crates/ruff/resources/test/fixtures/flake8_bugbear/: B018.py
crates/ruff/src/checkers/: noqa.rs
crates/ruff/src/checkers/ast/: mod.rs
crates/ruff/src/rules/flake8_bugbear/rules/: useless_expression.rs
crates/ruff/src/rules/flake8_bugbear/snapshots/: ruff__rules__flake8_bugbear__tests__B018_B018.py.snap
crates/ruff/src/rules/flake8_simplify/snapshots/: ruff__rules__flake8_simplify__tests__SIM401_SIM401.py.snap
crates/ruff_benchmark/: Cargo.toml  README.md
crates/ruff_benchmark/src/: lib.rs  main.rs  test_case.rs
crates/ruff_python_ast/src/: helpers.rs
