[package]
name = "ruff_benchmark"
version = "0.0.0"
publish = false
edition.workspace = true
authors.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
description = "Ruff Micro-benchmarks"

[dependencies]
criterion = { version = "0.4.0", default-features = false}
ruff.path = "../ruff"
pico-args = "0.5.0"
url = "2.3.1"
ureq = "2.6.2"

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc = "0.1.34"

[target.'cfg(all(not(target_os = "windows"), not(target_os = "openbsd"), any(target_arch = "x86_64", target_arch = "aarch64", target_arch = "powerpc64")))'.dependencies]
tikv-jemallocator = "0.5.0"
